<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_weight="1"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/ctaBtnLoginForm"
                    android:layout_width="300dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/color_baby_blue1"
                    android:gravity="center"
                    android:text="@string/btn_txt_login"
                    android:textColor="@color/color_white"
                    android:textSize="16sp"
                    app:layout_constraintHorizontal_bias="0.503"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/box_login_form_constraint_layout" />

                <Button
                    android:id="@+id/dontHaveAnAccountbutton"
                    android:layout_width="300dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="58dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/txt_link_sign_up"
                    android:textColor="@color/color_blue1"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ctaBtnLoginForm"
                    tools:layout_editor_absoluteX="91dp"
                    tools:layout_editor_absoluteY="440dp" />

                <TextView
                    android:id="@+id/box_title_welcome_login"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="start"
                    android:lineSpacingMultiplier="1.5"
                    android:text="@string/txt_title_login"
                    android:textColor="@color/color_midnight_express"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="0"
                    tools:layout_editor_absoluteY="0" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/box_login_form_constraint_layout"
                    android:layout_width="300dp"
                    android:layout_height="160dp"
                    android:layout_marginTop="50dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/box_title_welcome_login"
                    tools:layout_editor_absoluteX="30dp"
                    tools:layout_editor_absoluteY="130dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="0dp">


                        <TextView
                            android:id="@+id/box_email_address_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-1dp"
                            android:alpha="0.64"
                            android:gravity="start"
                            android:lineSpacingMultiplier="1.25"
                            android:text="@string/txt_label_email_address"
                            android:textColor="@color/color_east_bay"
                            android:textSize="16sp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="9dp"
                            android:background="@color/color_azure1"
                            app:layout_constraintHorizontal_weight="1"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/box_email_address_text_view"
                            tools:layout_editor_absoluteX="0dp"
                            tools:layout_editor_absoluteY="30dp" />

                        <EditText
                            android:layout_width="250dp"
                            android:layout_height="21dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="23dp"
                            android:background="@color/color_azure1"
                            android:gravity="start|center_vertical"
                            android:hint="@string/txt_hint_email_address"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColor="@color/color_midnight_express"
                            android:textColorHint="@color/color_light_blue1"
                            android:textSize="16sp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/box_email_address_text_view"
                            tools:layout_editor_absoluteX="25dp"
                            tools:layout_editor_absoluteY="40dp" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="100dp">

                        <TextView
                            android:id="@+id/box_password_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-1dp"
                            android:alpha="0.64"
                            android:gravity="start"
                            android:lineSpacingMultiplier="1.25"
                            android:text="@string/txt_label_password_credentials"
                            android:textColor="@color/color_east_bay"
                            android:textSize="16sp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:layout_editor_absoluteX="0dp"
                            tools:layout_editor_absoluteY="-2dp" />

                        <View
                            android:layout_width="298dp"
                            android:layout_height="57dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/color_azure1"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintHorizontal_weight="1"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/box_password_text_view" />

                        <EditText
                            android:layout_width="250dp"
                            android:layout_height="21dp"
                            android:layout_marginStart="19dp"
                            android:layout_marginTop="23dp"
                            android:background="@color/color_azure1"
                            android:gravity="start|center_vertical"
                            android:hint="@string/txt_hint_password_credentials"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/color_primary_dark"
                            android:textSize="16sp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/box_password_text_view"
                            tools:layout_editor_absoluteX="19dp"
                            tools:layout_editor_absoluteY="48dp" />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>